# summon

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  FAQ.md  README.de.md  README.es.md  README.ja.md  README.ko.md  README.md  README.vi.md  README.zh.md  SPEC.md  config.yaml  config.yaml.template  index.html  install.ps1  install.sh
.github/workflows/: claude-code-review.yml  claude.yml  docs.yml  release.yml  test-install.yml
assets/: index-B70uc7sL.js  index-BYB1WHOJ.js  index-BZt1R_4h.js  index-D6if-E89.js  index-Dv4CLtso.css  index-EQkrhDdx.js  index-lLwZFAwo.js  index-mLsrHR7b.js  index-sfqtHY8f.css
docs/: index.html  package.json  vite.config.ts
docs/plans/: 2026-02-15-account-concurrency-limiter-design.md
docs/src/: App.tsx
docs/src/components/: CodeBlock.tsx  LanguageSwitcher.tsx  Layout.tsx  TableOfContents.tsx
docs/src/components/ui/: dropdown-menu.tsx  sheet.tsx
docs/src/i18n/: index.ts
docs/src/i18n/locales/: de.json  en.json  es.json  ja.json  ko.json  vi.json  zh.json
docs/src/pages/: Changelog.tsx  Configuration.tsx  Home.tsx  Installation.tsx  Providers.tsx  Service.tsx  Troubleshooting.tsx  Usage.tsx
memory-bank/: activeContext.md
src/: config.rs  configure.rs  main.rs  pool.rs  proxy.rs  update.rs
src/transformer/: gemini.rs  mod.rs  openai.rs
