[package]
name = "summon"
version = "0.3.0"
edition = "2021"

[dependencies]
axum = "0.8"
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-stream = "0.3"
futures-core = "0.3"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
dirs = "6"
